--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "clsx": "^1.2.1",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
@@ -25,9 +27,12 @@
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^20.0.3",
     "prettier": "^2.8.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
-    "vite-plugin-markdown": "^2.1.0"
+    "vite-plugin-markdown": "^2.1.0",
+    "vitest": "^0.26.3",
+    "vitest-fetch-mock": "^0.2.1"
   }
 }
