--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/dom": "^8.19.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-dom": "link:@types/testing-library/jest-dom",
     "jsdom": "^20.0.3",
     "prettier": "^2.8.1",
     "typescript": "^4.6.4",
