--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.4.5",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-react": "^7.18.6",
+    "@faker-js/faker": "^7.6.0",
     "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
