--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "cross-fetch": "^3.1.5",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest-dom": "link:@types/testing-library/jest-dom",
     "jsdom": "^20.0.3",
+    "msw": "^0.49.2",
     "prettier": "^2.8.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
