--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "clsx": "^1.2.1",
@@ -30,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "@vitest/ui": "^0.28.5",
     "cross-fetch": "^3.1.5",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
