--- a/package.json
+++ b/package.json
@@ -34,8 +34,14 @@
     "@vitest/ui": "^0.28.5",
     "cross-fetch": "^3.1.5",
     "eslint": "^8.29.0",
+    "eslint-plugin-const-case": "^1.2.2",
+    "eslint-plugin-github": "^4.6.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unicorn": "^45.0.2",
     "jest-dom": "link:@types/testing-library/jest-dom",
     "jsdom": "^20.0.3",
     "msw": "^0.49.2",
